<?xml version="1.0"?>
<!-- Yaoyu Hu has modify this file to tune the RPLIDAR in the Field Rotobics Lab at CMU -->
<package format="2">
  <name>rplidar_ros</name>
  <version>1.5.7</version>
  <description>The rplidar ros package, support rplidar A2/A1 </description>

  <maintainer email="ros@slamtec.com">Slamtec ROS Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
